--- a/.env
+++ b/.env
@@ -17,3 +17,10 @@
 APP_ENV=dev
 APP_SECRET=bda977b6ba3fdaa5a6d26ff0ef68eee6
 ###< symfony/framework-bundle ###
+
+###> doctrine/doctrine-bundle ###
+# Format described at https://www.doctrine-project.org/projects/doctrine-dbal/en/latest/reference/configuration.html#connecting-using-a-url
+# IMPORTANT: You MUST configure your server version, either here or in config/packages/doctrine.yaml
+#
+DATABASE_URL="sqlite:///%kernel.project_dir%/var/database.db"
+###< doctrine/doctrine-bundle ###
